# doc-translator

./: .gitignore  1.docx  1_ru.docx  1_translated_English.docx  1_translated_English_translated_Russian.docx  1_translated_Russian.docx  3. PSR-L08-0623_Protocol_1.0 dated 10.06.2024_clean_EN_fin.docx  3. PSR-L08-0623_Protocol_1.0 dated 10.06.2024_clean_EN_fin_translated_Russian.docx  README.md  RELEASING.md  pyproject.toml  test.ipynb  translate.ipynb  translate_log.txt
docs/: GITHUB_SETUP.md
examples/: README.md
src/doc_translator/: __init__.py  cli.py
src/doc_translator/models/: __init__.py  chunk.py
src/doc_translator/processors/: __init__.py  base.py  markdown_utils.py  mineru_pdf.py  mineru_utils.py  pandoc_utils.py  pandoc_word.py  pdf.py  word.py
src/doc_translator/translator/: __init__.py  ollama.py
tests/: __init__.py  test_word_processor.py
