[project]
name = "doc-translator"
version = "0.1.0"
description = "Инструмент для разбиения и перевода клинических/регуляторных документов с использованием локальной LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-docx>=1.2.0",
    "pdf2docx>=0.5.8",
    "jupyterlab>=4.5.3",
]

[project.scripts]
doc-translator = "doc_translator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_translator"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
